--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,1 +1,9 @@
 @import "tailwindcss";
+
+@layer utilities {
+  .no-spinner::-webkit-inner-spin-button,
+  .no-spinner::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+}
